exports[`AppNavBar renders itemized children 1`] = `
<nav
  style={
    Object {
      "height": 100,
    }
  }>
  <ul
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "listStyleType": "none",
        "margin": 0,
        "padding": 0,
      }
    }>
    <li
      style={
        Object {
          "flex": 1,
          "textAlign": "center",
        }
      }>
      <div>
        TITLE
      </div>
    </li>
    <li
      style={
        Object {
          "flex": 1,
          "textAlign": "center",
        }
      }>
      <button>
        BUTTON
      </button>
    </li>
  </ul>
</nav>
`;

exports[`AppNavBar renders the component 1`] = `
<nav
  style={
    Object {
      "height": 100,
    }
  }>
  <ul
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "listStyleType": "none",
        "margin": 0,
        "padding": 0,
      }
    } />
</nav>
`;
